# gaussutils

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
scripts/: checkpoint_to_mesh.py  load_checkpoint.py  postprocess_mesh.py  postprocess_splat.py  reconstruct.py
src/gaussutils/: __init__.py  georef_utils.py  mesh_utils.py  reconstruct.py  scene_utils.py  splat_utils.py
